# pdf-cjk-analyzer

./: README.md
test_pdf_extractor/: .gitignore  Cargo.toml  REVISION_PLAN.md
test_pdf_extractor/src/: cmap_diagnostic.rs  comprehensive_test.rs  diagnostic.rs  enhanced_extractor.rs  enhanced_test.rs  main.rs
zkpdf/app/: package-lock.json  package.json
zkpdf/app/app/: page.tsx
zkpdf/app/public/pkg/: wasm_bg.wasm
zkpdf/pdf-utils/extractor/: test_alipay.rs
zkpdf/pdf-utils/extractor/src/: cmap.rs  font.rs  lib.rs
