[package]
name = "test_pdf_extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_pdf_extractor"
path = "src/main.rs"

[[bin]]
name = "diagnostic"
path = "src/diagnostic.rs"

[[bin]]
name = "cmap_diagnostic"
path = "src/cmap_diagnostic.rs"

[[bin]]
name = "enhanced_extractor"
path = "src/enhanced_extractor.rs"

[[bin]]
name = "enhanced_test"
path = "src/enhanced_test.rs"

[[bin]]
name = "comprehensive_test"
path = "src/comprehensive_test.rs"

[dependencies]
extractor = { path = "../zkpdf/pdf-utils/extractor" }
regex = "1.0"
hex = "0.4"
